# projectEuler

./: CMakeLists.txt  main.cpp
common/: combinatorics.h  constants.h  factors.h  fibonacci.h  primes.h  services.h  type.h  utils.h
problems/: 001_MultipleOf3And5.h  002_EvenFibonacciNumbers.h  003_LargestPrimeFactor.h  004_LargestPalindromeProduct.h  005_SmallestMultiple.h  006_SumSuqareDifference.h  008_LargestProductInASeries.h  009_SpecialPythagoreanTriplet.h  010_SummationOfPrimes.h  011_LargestProductInAGrid.h  012_HighlyDivisibleTriangularNumber.h  013_LargeSum.h  014_LongestCollatzSequence.h  015_LatticePaths.h  018_MaximumPathSumI.h  019_CountingSundays.h  021_AmicableNumbers.h  024_LexicographicPermutations.h  025_1000-digitfibonacciNumber.h  027_QuadraticPrimes.h  031_CoinSums.h  032_PandigitalProducts.h  034_DigitFactorials.h  044_PentagonNumbers.h  050_ConsecutivePrimeSum.h  063_PowerfulDigitCounts.h  067_MaximumPathSumII.h  069_TotientMaximum.h  788_DominatingNumbers.h  991_FruitSalad.h
test/: test.h
